h1. CHANGELOG

h2. 1.0.24 November 8, 2011

* update gem 'omniauth' from 0.3.2 to 1.0.0 (and update recipe)
* use mongoid 2.3.3 (works with bson_ext 1.3.1)
* update gem 'cucumber-rails' from 1.1.1 to 1.2.0
* update gem 'rspec-rails' from 2.7.0 to 2.8.0.rc1

h2. 1.0.23 October 28, 2011

* mongoid 2.3.2 depends on bson_ext > 1.4, use mongoid 2.2.3 with bson_ext 1.3.1

h2. 1.0.22 October 28, 2011

* gem 'bson_ext' rolled back from 1.4.1 to 1.3.1 because of performance issues

h2. 1.0.21 October 27, 2011

* drop HTML5 Boilerplate from the html5 recipe
* add Zurb Foundation framework to html5 recipe
* add Twitter Bootstrap framework to html5 recipe
* use RbConfig instead of Config to avoid deprecation warning in Ruby 1.9.3
* update gem 'bson_ext' from 1.4.0 to 1.4.1
* update gem 'mongoid' from 2.3.0 to 2.3.2
* update gem 'devise' from 1.4.7 to 1.4.9
* update gem 'factory_girl_rails' from 1.2.0 to 1.3.0
* update gem 'rspec-rails' from 2.6.1 to 2.7.0
* update gem 'omniauth' from 0.3.0 to 0.3.2

h2. 1.0.20 October 7, 2011

* update gem 'cucumber-rails' from 1.0.2 to 1.1.1
* update gem 'bson_ext' from 1.3.1 to 1.4.0
* update gem 'mongoid' from 2.2.0 to 2.3.0
* update gem 'devise' from 1.4.5 to 1.4.7
* update gem 'omniauth' from 0.3.0.rc3 to 0.3.0

h2. 1.0.19 September 9, 2011

* fixed pesky HAML indent in 'navigation' recipe

h2. 1.0.18 September 9, 2011

* remove 'devise_navigation' recipe and merge with 'navigation' recipe
* update gem 'capybara' from 1.1.0 to 1.1.1
* update gem 'devise' from 1.4.4 to 1.4.5
* update gem 'omniauth' from 0.2.6 to 0.3.0.rc3
* fix indentation of 'body' tag in 'html5' recipe
* add recipe for Guard (contributed by Ashley Woodard)
* remove explicit dependency on sass gem for Rails 3.1 projects (contributed by Ashley Woodard)

h2. 1.0.17 September 2, 2011

* update gem 'factory_girl_rails' from 1.1.0 to 1.2.0
* update gem 'capybara' 1.0.1 to 1.1.0
* for 'omniauth' recipe, use OmniAuth from GitHub to avoid gem compatibility issues