@@ -22,7 +22,7 @@ if config['rspec']
     gem 'rspec-rails', '>= 2.8.0.rc1', :group => [:development, :test]
     if recipes.include? 'mongoid'
       # use the database_cleaner gem to reset the test database
-      gem 'database_cleaner', '>= 0.6.7', :group => :test
+      gem 'database_cleaner', '>= 0.7.0', :group => :test
       # include RSpec matchers from the mongoid-rspec gem
       gem 'mongoid-rspec', '>= 1.4.4', :group => :test
     end
